--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -23,3 +23,7 @@
 [[constraint]]
   name = "github.com/julienschmidt/httprouter"
   version = "1.1.0"
+
+[[constraint]]
+  name = "github.com/stretchr/testify"
+  version = "1.2.0"
